# aws-mfa

./: .gitignore  LICENCE  README.md  aws-mfa.py  get_new_mfa_token.py  pyproject.toml  test_aws_mfa.py
